# snitch-sdk

./: .gitignore  .gitmodules  Bender.yml  CMakeLists.txt  Makefile  README.md  requirements.txt
cmake/: SnitchRuntimeConfig.cmake.in  common.cmake
cmake/toolchains/: toolchain_llvm.cmake
cmake/tools/: SnitchUtilities.cmake  generate_hw_headers.cmake  generate_peripherals.cmake
config/: snitch_cluster_cfg.h.in
core/: CMakeLists.txt
core/inc/: alloc.h  alloc_decls.h  alloc_v2.h  cls.h  cls_decls.h  cluster_interrupt_decls.h  cluster_interrupts.h  dm.h  dma.h  dump.h  global_interrupts.h  memory_decls.h  openocd.h  perf_cnt.h  printf.h  riscv.h  ssr.h  start.h  start_decls.h  sync.h  sync_decls.h  team.h
core/src/: alloc.c  alloc_v2.c  cls.c  cluster_interrupts.c  dm.c  dma.c  global_interrupts.c  perf_cnt.c  printf.c  snrt_putchar.c  start.c  sync.c  team.c
docs/: .gitignore  Doxyfile.in  Makefile
docs/src_sphinx/: conf.py  index.rst
docs/src_sphinx/usage/: build.rst  structure.rst  usage.rst
omp/: CMakeLists.txt
omp/inc/: eu.h  eu_decls.h  interface.h  kmp.h  omp.h
omp/src/: eu.c  kmp.c  omp.c
scripts/: clustergen.py  run_clang_format.py
scripts/clustergen/: cluster.py
